# cpp-opengl-template

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
assets/: input.txt
source/: CMakeLists.txt  main.cpp  types.h
